crates/pg_syntax/tests/snapshots/postgres_regress/truncate@180.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO trunc_a VALUES (0), (5), (10), (15), (20), (25);"
---
InsertStmt@0..60
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..19
    Ident@12..19 "trunc_a"
  Whitespace@19..20 " "
  SelectStmt@20..58
    Values@20..26 "VALUES"
    Whitespace@26..27 " "
    Ascii40@27..28 "("
    List@28..29
      AConst@28..29
        Iconst@28..29 "0"
    Ascii41@29..30 ")"
    Ascii44@30..31 ","
    Whitespace@31..32 " "
    Ascii40@32..33 "("
    List@33..34
      AConst@33..34
        Iconst@33..34 "5"
    Ascii41@34..35 ")"
    Ascii44@35..36 ","
    Whitespace@36..37 " "
    Ascii40@37..38 "("
    List@38..40
      AConst@38..40
        Iconst@38..40 "10"
    Ascii41@40..41 ")"
    Ascii44@41..42 ","
    Whitespace@42..43 " "
    Ascii40@43..44 "("
    List@44..46
      AConst@44..46
        Iconst@44..46 "15"
    Ascii41@46..47 ")"
    Ascii44@47..48 ","
    Whitespace@48..49 " "
    Ascii40@49..50 "("
    List@50..52
      AConst@50..52
        Iconst@50..52 "20"
    Ascii41@52..53 ")"
    Ascii44@53..54 ","
    Whitespace@54..55 " "
    Ascii40@55..56 "("
    List@56..58
      AConst@56..58
        Iconst@56..58 "25"
  Ascii41@58..59 ")"
  Ascii59@59..60 ";"

