crates/pg_syntax/tests/snapshots/postgres_regress/truncate@182.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO ref_b VALUES (10, 0), (50, 5), (100, 10), (150, 15);"
---
InsertStmt@0..64
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..17
    Ident@12..17 "ref_b"
  Whitespace@17..18 " "
  SelectStmt@18..62
    Values@18..24 "VALUES"
    Whitespace@24..25 " "
    Ascii40@25..26 "("
    List@26..31
      AConst@26..28
        Iconst@26..28 "10"
      Ascii44@28..29 ","
      Whitespace@29..30 " "
      AConst@30..31
        Iconst@30..31 "0"
    Ascii41@31..32 ")"
    Ascii44@32..33 ","
    Whitespace@33..34 " "
    Ascii40@34..35 "("
    List@35..40
      AConst@35..37
        Iconst@35..37 "50"
      Ascii44@37..38 ","
      Whitespace@38..39 " "
      AConst@39..40
        Iconst@39..40 "5"
    Ascii41@40..41 ")"
    Ascii44@41..42 ","
    Whitespace@42..43 " "
    Ascii40@43..44 "("
    List@44..51
      AConst@44..47
        Iconst@44..47 "100"
      Ascii44@47..48 ","
      Whitespace@48..49 " "
      AConst@49..51
        Iconst@49..51 "10"
    Ascii41@51..52 ")"
    Ascii44@52..53 ","
    Whitespace@53..54 " "
    Ascii40@54..55 "("
    List@55..62
      AConst@55..58
        Iconst@55..58 "150"
      Ascii44@58..59 ","
      Whitespace@59..60 " "
      AConst@60..62
        Iconst@60..62 "15"
  Ascii41@62..63 ")"
  Ascii59@63..64 ";"

