crates/pg_syntax/tests/snapshots/postgres_regress/truncate@183.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: TRUNCATE TABLE trunc_a1 CASCADE;
---
TruncateStmt@0..32
  Truncate@0..8 "TRUNCATE"
  Whitespace@8..9 " "
  Table@9..14 "TABLE"
  Whitespace@14..15 " "
  RangeVar@15..23
    Ident@15..23 "trunc_a1"
  Whitespace@23..24 " "
  Cascade@24..31 "CASCADE"
  Ascii59@31..32 ";"

