crates/pg_syntax/tests/snapshots/postgres_regress/truncate@184.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: SELECT a FROM ref_b;
---
SelectStmt@0..20
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      Ident@7..8 "a"
  Whitespace@8..9 " "
  From@9..13 "FROM"
  Whitespace@13..14 " "
  RangeVar@14..19
    Ident@14..19 "ref_b"
  Ascii59@19..20 ";"

