crates/pg_syntax/tests/snapshots/postgres_regress/truncate@188.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: CREATE TABLE ref_c2 PARTITION OF ref_c FOR VALUES FROM (200) TO (300);
---
CreateStmt@0..70
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Table@7..12 "TABLE"
  Whitespace@12..13 " "
  RangeVar@13..19
    Ident@13..19 "ref_c2"
  Whitespace@19..20 " "
  Partition@20..29 "PARTITION"
  Whitespace@29..30 " "
  Of@30..32 "OF"
  Whitespace@32..33 " "
  RangeVar@33..38
    Ident@33..38 "ref_c"
  Whitespace@38..39 " "
  For@39..42 "FOR"
  Whitespace@42..43 " "
  Values@43..49 "VALUES"
  Whitespace@49..50 " "
  PartitionBoundSpec@50..68
    From@50..54 "FROM"
    Whitespace@54..55 " "
    Ascii40@55..56 "("
    AConst@56..59
      Iconst@56..59 "200"
    Ascii41@59..60 ")"
    Whitespace@60..61 " "
    To@61..63 "TO"
    Whitespace@63..64 " "
    Ascii40@64..65 "("
    AConst@65..68
      Iconst@65..68 "300"
  Ascii41@68..69 ")"
  Ascii59@69..70 ";"

