crates/pg_syntax/tests/snapshots/postgres_regress/truncate@190.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: TRUNCATE TABLE trunc_a21 CASCADE;
---
TruncateStmt@0..33
  Truncate@0..8 "TRUNCATE"
  Whitespace@8..9 " "
  Table@9..14 "TABLE"
  Whitespace@14..15 " "
  RangeVar@15..24
    Ident@15..24 "trunc_a21"
  Whitespace@24..25 " "
  Cascade@25..32 "CASCADE"
  Ascii59@32..33 ";"

