crates/pg_syntax/tests/snapshots/postgres_regress/truncate@191.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT a as \"from table ref_c\" FROM ref_c;"
---
SelectStmt@0..42
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..30
    ColumnRef@7..8
      Ident@7..8 "a"
    Whitespace@8..9 " "
    As@9..11 "as"
    Whitespace@11..12 " "
    Ident@12..30 "\"from table ref_c\""
  Whitespace@30..31 " "
  From@31..35 "FROM"
  Whitespace@35..36 " "
  RangeVar@36..41
    Ident@36..41 "ref_c"
  Ascii59@41..42 ";"

