crates/pg_syntax/tests/snapshots/postgres_regress/truncate@192.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT a as \"from table trunc_a\" FROM trunc_a ORDER BY a;"
---
SelectStmt@0..57
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..32
    ColumnRef@7..8
      Ident@7..8 "a"
    Whitespace@8..9 " "
    As@9..11 "as"
    Whitespace@11..12 " "
    Ident@12..32 "\"from table trunc_a\""
  Whitespace@32..33 " "
  From@33..37 "FROM"
  Whitespace@37..38 " "
  RangeVar@38..45
    Ident@38..45 "trunc_a"
  Whitespace@45..46 " "
  SortBy@46..56
    Order@46..51 "ORDER"
    Whitespace@51..52 " "
    By@52..54 "BY"
    Whitespace@54..55 " "
    ColumnRef@55..56
      Ident@55..56 "a"
  Ascii59@56..57 ";"

